backend/vulnerability_analysis/testing/bof2/segments/klee-out-0/test000007.ptr.err
Error: memory error: out of bound pointer
File: libc/string/strlen.c
Line: 22
assembly.ll line: 9565
State: 1
Stack: 
	#000009565 in strlen(138615497687040) at libc/string/strlen.c:22
	#100007818 in obfuscate(138615497687040, 138613350203392, 138617645170688) at testing/bof2/segments/segment_1_klee.c:5
	#200008098 in __klee_posix_wrapped_main() at testing/bof2/segments/segment_1_klee.c:21
	#300006080 in __user_main(1, 139841173979136, 139841173979152) at src/runtime/POSIX/klee_init_env.c:245
	#400000534 in __uClibc_main(139825395007488, 1, 139841173979136, 0, 0, 0, 0) at libc/misc/internals/__uClibc_main.c:401
	#500000699 in main(1, 139841173979136)
Info: 
	address: 138615497687050
	next: object at 138595633463296 of size 4
		MO7608[4] allocated at __klee_posix_wrapped_main():  %1 = alloca i32, align 4
